# SIGMA

./: CHANGELOG.md  MANUAL_GUIDE.ko.md  MANUAL_GUIDE.md  README.ko.md  README.md  pyproject.toml
configs/: default.yaml
scripts/: run_colmap.sh  run_pipeline.sh  run_train.sh
src/sigma/: cli.py  config.py
src/sigma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sigma/gaussian_splatting/: converter.py  trainer.py
src/sigma/map_generator/: map_2d.py  map_3d.py
src/sigma/preprocessor/: video.py
src/sigma/sfm/: colmap_runner.py
src/sigma/visualization/: viewer.py
tests/: test_cli.py  test_integration.py  test_map_generator.py  test_preprocessor.py  test_sfm.py
